--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       gap: 10px;
-    }
+      margin-bottom: 10px; 
+     }
     .portrait-grid {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       gap: 10px;
-      margin-bottom: 10px
     }
     .img-landscape {
       width: 100%;
