--- a/index.html
+++ b/index.html
@@ -69,12 +69,14 @@
   <meta charset="UTF-8">
   <style>
     .landscape-gallery {
-      max-width: 1200px;   /* wider for landscape */
+      align-items: center;
+      max-width: 1000px;   /* wider for landscape */
       margin: 0 auto 40px auto;
       width: 100%;
     }
     .portrait-gallery {
-      max-width: 800px;    /* narrower for portrait */
+      align-items: center;
+      max-width: 1000px;    /* narrower for portrait */
       margin: 0 auto 40px auto;
       width: 100%;
       }
@@ -82,7 +84,7 @@
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       gap: 10px;
-      margin-bottom: 10px; 
+      margin-bottom: 16px; 
      }
     .portrait-grid {
       display: grid;
