--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
     .landscape-grid {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
+      grid-auto-rows: 300px
       gap: 10px;
       margin-bottom: 16px; 
      }
