--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     .landscape-grid {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
-      grid-auto-rows: 800px
+      grid-auto-rows: 800px   /* all rows fixed height */
       gap: 10px;
       margin-bottom: 16px; 
      }
