--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
       }
     .landscape-grid {
       display: grid;
+      align-self: center;  /* centers vertically in the grid cell */
       grid-template-columns: repeat(2, 1fr);
       grid-auto-rows: 800px   /* all rows fixed height */
       gap: 10px;
