--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
     .landscape-grid {
       display: grid;
       align-self: center;  /* centers vertically in the grid cell */
-      grid-template-columns: repeat(2, 3fr);
+      grid-template-columns: repeat(2, 1.5fr);
+      grid-template-rows: auto 400px auto
       grid-auto-rows: 800px   /* all rows fixed height */
       gap: 10px;
       margin-bottom: 16px; 
