--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
       }
     .landscape-grid {
       display: grid;
-      align-self: center;  /* centers vertically in the grid cell */
-      grid-template-columns: repeat(2, 1.5fr);
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
       grid-template-rows: auto 800px auto
       gap: 10px;
       margin-bottom: 20px; 
