--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
     .landscape-grid {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-      grid-template-rows: auto 800px auto
+      grid-template-rows: auto 200px auto
+      grid-auto-flow: dense;  /* backfill gaps */
       gap: 10px;
       margin-bottom: 20px; 
      }
