--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       }
     .landscape-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      grid-template-columns: repeat(auto-fit, max(2, 1fr));
       grid-template-rows: auto 200px auto
       grid-auto-flow: dense;  /* backfill gaps */
       gap: 10px;
