--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       }
     .landscape-grid {
       display: grid;
-      grid-template-columns: 200px 1fr 2fr;
+      grid-template-columns: repeat(2, 1fr);
       grid-template-rows: auto 200px auto
       justify-self: center; /* left | right | center | stretch */
       align-self: end;      /* top | bottom | center | stretch */
