--- a/index.html
+++ b/index.html
@@ -68,50 +68,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SSC Electrical Gallery</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #fafafa;
       margin: 0;
       padding: 20px;
     }
 
-    /* shared wrapper so both align */
-    .gallery-container {
-      max-width: 1000px;   /* same width for both */
-      margin: 0 auto;
-      display: flex;
-      flex-direction: column;
-      gap: 40px; /* equal spacing between sections */
-    }
-
-    /* 2-column grid for landscapes */
-    .landscape-grid {
+    .gallery {
       display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 15px; /* same gap as portraits */
-    }
-
-    /* 3-column grid for portraits */
-    .portrait-grid {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: repeat(3, 1fr); /* 3 equal columns */
       gap: 15px; /* consistent spacing */
+      max-width: 1000px; /* same width for both orientations */
+      margin: 0 auto;
     }
 
-    /* consistent image sizing */
-    .img-landscape {
+    /* Portrait images → 1 column, tall */
+    .portrait {
+      grid-column: span 1;
       width: 100%;
-      aspect-ratio: 4/3;   /* not as wide as 16/9 → looks closer to portraits */
+      aspect-ratio: 2 / 3;   /* tall portrait */
       object-fit: cover;
       background: #eee;
       display: block;
     }
 
-    .img-portrait {
+    /* Landscape images → 2 columns, shorter but wider */
+    .landscape {
+      grid-column: span 2;
       width: 100%;
-      aspect-ratio: 4/5;   /* portrait look */
+      aspect-ratio: 3 / 2;   /* balanced so area ~ same as portraits */
       object-fit: cover;
       background: #eee;
       display: block;
@@ -119,25 +105,31 @@
   </style>
 </head>
 <body>
-  <div class="gallery-container">
+  <div class="gallery">
 
-    <div class="landscape-grid">
-      <img src="img1.jpg" alt="Landscape 1" class="img-landscape">
-      <img src="img2.jpg" alt="Landscape 2" class="img-landscape">
-      <img src="img7.jpg" alt="Landscape 3" class="img-landscape">
-      <img src="img13.jpg" alt="Landscape 4" class="img-landscape">
-      <img src="img4.jpg" alt="Landscape 5" class="img-landscape">
-      <img src="img11.jpg" alt="Landscape 6" class="img-landscape">
-    </div>
+    <!-- Landscapes first -->
+    <img src="img1.jpg" alt="Landscape 1" class="landscape">
+    <img src="img2.jpg" alt="Landscape 2" class="landscape">
 
-    <div class="portrait-grid">
-      <img src="img5.jpg" alt="Portrait 1" class="img-portrait">
-      <img src="img6.jpg" alt="Portrait 2" class="img-portrait">
-      <img src="img8.jpg" alt="Portrait 3" class="img-portrait">
-      <img src="img10.jpg" alt="Portrait 4" class="img-portrait">
-      <img src="img3.jpg" alt="Portrait 5" class="img-portrait">
-      <img src="img9.jpg" alt="Portrait 6" class="img-portrait">
-    </div>
+    <!-- Portraits -->
+    <img src="img5.jpg" alt="Portrait 1" class="portrait">
+    <img src="img6.jpg" alt="Portrait 2" class="portrait">
+    <img src="img8.jpg" alt="Portrait 3" class="portrait">
+
+    <!-- More landscapes -->
+    <img src="img7.jpg" alt="Landscape 3" class="landscape">
+    <img src="img13.jpg" alt="Landscape 4" class="landscape">
+
+    <!-- More portraits -->
+    <img src="img10.jpg" alt="Portrait 4" class="portrait">
+    <img src="img3.jpg" alt="Portrait 5" class="portrait">
+    <img src="img9.jpg" alt="Portrait 6" class="portrait">
+
+    <!-- Remaining landscapes -->
+    <img src="img4.jpg" alt="Landscape 5" class="landscape">
+    <img src="img11.jpg" alt="Landscape 6" class="landscape">
+
+  </div>
  </section>
 <section id="reviews">
 <h2>What Our Customers Say</h2>
