--- a/index.html
+++ b/index.html
@@ -70,12 +70,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     }
-    .gallery-container {
+    .gallery-landscape {
+        max-height: 1200px;
+        margin: 0 auto;
+        display: flex;
+        flex-direction; column;
+        gap: 20px;
+       } 
+    .gallery-portrait {
       max-width: 1200px;  /* make bigger so photos aren’t tiny */
       margin: 0 auto;
       display: flex;
       flex-direction: column;
-      gap:20px; /* spacing between landscape + portrait sections */
+      gap: 20px; /* spacing between landscape + portrait sections */
     }
     .landscape-grid {
       display: grid;
