--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         display: flex;
         max-width: 1200px;
         flex-direction; column;
+        padding-bottom: 20px;
         gap: 20px;
        } 
     .gallery-portrait {
@@ -93,12 +94,12 @@
           }
     .landscape-grid {
       display: grid;
-      grid-template-columns: repeat(2, 3fr);
+      grid-template-columns: auto auto auto;
       gap: 20px; 
     }
     .portrait-grid {
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: auto auto auto;
       gap: 20px; /* match landscape spacing */
     }
     .img-landscape {
