--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         max-height: 1200px;
         max-width: 1200px
         margin: 0 auto;
-        display: flex;
-        max-width: 1200px;
+        display: cover;
+        max-width: 1400px;
         flex-direction; column;
         padding-bottom: 20px;
         gap: 20px;
@@ -94,7 +94,8 @@
           }
     .landscape-grid {
       display: grid;
-      grid-template-columns: auto auto auto;
+      grid-template-columns: repeat(2, 1fr);
+      grid-auto-rows: 300px;
       gap: 20px; 
     }
     .portrait-grid {
