--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       grid-auto-rows: 300px;
-      gap: 20px; 
+      gap: 20px;
+        column-gap: 20px;
     }
     .portrait-grid {
       display: grid;
