--- a/index.html
+++ b/index.html
@@ -71,21 +71,20 @@
   <style>
     }
     .gallery-landscape {
-        max-height: 1200px;
+        max-height: 800px;
         max-width: 1200px
-        margin: 0 auto;
+        grid-template-columns: 2fr 1fr;
+        grid-auto-rows: 300px;
         display: cover;
         max-width: 1400px;
-        flex-direction; column;
-        padding-bottom: 20px;
         gap: 20px;
        } 
     .gallery-portrait {
-      max-width: 1200px;
+      max-width: 800px;
         max-height: 1200px;/* make bigger so photos aren’t tiny */
-      margin: 0 auto;
+      grid-template-columns: 3fr 1fr;
+      grid-auto-rows: 300px;
       display: flex;
-        max-width: 800px;
       flex-direction: column;
       gap: 20px; /* spacing between landscape + portrait sections */
     }
@@ -102,6 +101,7 @@
     .portrait-grid {
       display: grid;
       grid-template-columns: auto auto auto;
+      grid-auto-rows: 300px;
       gap: 20px; /* match landscape spacing */
     }
     .img-landscape {
