--- a/index.html
+++ b/index.html
@@ -62,16 +62,13 @@
 </ul>
 </section>
 <section id="gallery">
-<h2>Our Work</h2>
+    <meta charset="UTF-8"
+<h2>Our Work</h2>>
 <div class="gallery">
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Aligned Landscape & Portrait Gallery</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body {
-      font-family: Arial, sans-serif;
     }
     .gallery-container {
       max-width: 1200px;
