--- a/index.html
+++ b/index.html
@@ -139,9 +139,15 @@
 </section>
 <section id="service-area" style="padding: 2em;">
 <h2>Service Area</h2>
-<p>We proudly service Cooroy, Gympie, Noosa, Nambour, Coolum, Pomona, Tewantin, and Peregian Beach.</p>
-<iframe allowfullscreen="" height="300" loading="lazy" referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps?q=Cooroy,+QLD,+Australia&output=embed" style="border:0;" width="100%">
-</iframe>
+<p>We proudly service Cooroy Gympie Noosa Nambour Coolum Pomona Tewantin Peregian Beach Eumundi </p>
+<<iframe
+  src="https://www.google.com/maps/d/u/0/embed?mid=1uKwlfJMDq5TmrO92SBeMQLtE9V87A_o&ehbc=2E312F"
+  width="100%"
+  height="480"
+  style="border:0;"
+  allowfullscreen=""
+  loading="lazy"
+></iframe>
 </section>
 <section id="contact">
 <h2>Get in Touch</h2>
